res/examples/valid/stmt_assign_let_chain.eg
let a: number = 123;
let b: number = 456;
let c = a = b = 789;
