res/examples/invalid/let_decl_untyped_assign_from_identifier_type_mismatch.eg
let a = 123;
let b: string = a;

// out: TypeError: mismatched types: expected type `string` but received `number`